change the checkbox to Radio

--- a/index.html
+++ b/index.html
@@ -97,53 +97,53 @@
                     <h3><strong>1. COMPETENCES </strong>(<strong>E<sub>G1</sub></strong>)<sup> (2*)</sup></h3>
                     <div>
                         <p><strong>20%</strong></p>
-                        <!-- RECTANGLE  -->
-                        <canvas id='c1'></canvas>
+                        <!-- RECTANGLE 
+                        <canvas id='c1'></canvas> -->
                     </div>
                 </div>
                 <div class="contenaire4">
                     <label for="C1.1">C1.1. Connaissances de base en relation avec la formation initiale   10%</label>
                     <div>
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
+                        <input type="radio" name="check_C11" onclick="onlyOne(this)" class="C11" id="C11_A">
+                        <input type="radio" name="check_C11" onclick="onlyOne(this)" class="C11" id="C11_B">
+                        <input type="radio" name="check_C11" onclick="onlyOne(this)" class="C11" id="C11_C">
+                        <input type="radio" name="check_C11" onclick="onlyOne(this)" class="C11" id="C11_D">
                     </div>
                 </div>
                 <div class="contenaire4">
-                    <label for="C1.1">C1.2. Connaissances professionnelles liées au poste occupé  50%</label>
+                    <label for="C1.2">C1.2. Connaissances professionnelles liées au poste occupé  50%</label>
                     <div>
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
+                        <input type="radio" name="check_C12" onclick="onlyOne(this)" class="C12" id="C12_A">
+                        <input type="radio" name="check_C12" onclick="onlyOne(this)" class="C12" id="C12_B">
+                        <input type="radio" name="check_C12" onclick="onlyOne(this)" class="C12" id="C12_C">
+                        <input type="radio" name="check_C12" onclick="onlyOne(this)" class="C12" id="C12_D">
                     </div>
                 </div>
                 <div class="contenaire4">
-                    <label for="C1.1">C1.3. Capacité de gestion des équipes  20%</label>
+                    <label for="C1.3">C1.3. Capacité de gestion des équipes  20%</label>
                     <div>
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
+                        <input type="radio" name="check_C13" onclick="onlyOne(this)" class="C13" id="C13_A">
+                        <input type="radio" name="check_C13" onclick="onlyOne(this)" class="C13" id="C13_B">
+                        <input type="radio" name="check_C13" onclick="onlyOne(this)" class="C13" id="C13_C">
+                        <input type="radio" name="check_C13" onclick="onlyOne(this)" class="C13" id="C13_D">
                     </div>
                 </div>
                 <div class="contenaire4">
-                    <label for="C1.1">C1.4. Capacités d’expression écrite et orale 10%</label>
+                    <label for="C1.4">C1.4. Capacités d’expression écrite et orale 10%</label>
                     <div>
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
+                        <input type="radio" name="check_C14" onclick="onlyOne(this)" class="C14" id="C14_A">
+                        <input type="radio" name="check_C14" onclick="onlyOne(this)" class="C14" id="C14_B">
+                        <input type="radio" name="check_C14" onclick="onlyOne(this)" class="C14" id="C14_C">
+                        <input type="radio" name="check_C14" onclick="onlyOne(this)" class="C14" id="C14_D">
                     </div>
                 </div>
                 <div class="contenaire4">
-                    <label for="C1.1">C1.5. Potentiel d’apprentissage et d’évolution 10%</label>
+                    <label for="C1.5">C1.5. Potentiel d’apprentissage et d’évolution 10%</label>
                     <div>
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
-                        <input type="checkbox" name="check" onclick="onlyOne(this)" >
+                        <input type="radio" name="check_C15" onclick="onlyOne(this)" class="C15" id="C15_A">
+                        <input type="radio" name="check_C15" onclick="onlyOne(this)" class="C15" id="C15_B">
+                        <input type="radio" name="check_C15" onclick="onlyOne(this)" class="C15" id="C15_C">
+                        <input type="radio" name="check_C15" onclick="onlyOne(this)" class="C15" id="C15_D">
                     </div>
                 </div>
                 <label for="Evaluation_qualitative : "><span class="textarea_label">Evaluation qualitative :<span
@@ -156,39 +156,39 @@
                     </div>
                 </div>
                 <div class="contenaire4">
-                    <label for="C1.1">C2.1. Rigueur et qualité du travail 25%</label>
+                    <label for="C2.1">C2.1. Rigueur et qualité du travail 25%</label>
                     <div>
-                        <input type="checkbox" name="check" onclick="onlyOne(this)">
-                        <input type="checkbox" name="check" onclick="onlyOne(this)">
-                        <input type="checkbox" name="check" onclick="onlyOne(this)">
-                        <input type="checkbox" name="check" onclick="onlyOne(this)">
+                        <input type="radio" name="check_C21" onclick="onlyOne(this)" class="C21" id="C21_A">
+                        <input type="radio" name="check_C21" onclick="onlyOne(this)" class="C21" id="C21_B">
+                        <input type="radio" name="check_C21" onclick="onlyOne(this)" class="C21" id="C21_C">
+                        <input type="radio" name="check_C21" onclick="onlyOne(this)" class="C21" id="C21_D">
                     </div>
                 </div>
                 <div class="contenaire4">
-                    <label for="C1.1">C2.2. Respect des plannings 25%</label>
+                    <label for="C2.2">C2.2. Respect des plannings 25%</label>
                     <div>
-                        <input type="checkbox" name="check" onclick="onlyOne(this)">
-                        <input type="checkbox" name="check" onclick="onlyOne(this)">
-                        <input type="checkbox" name="check" onclick="onlyOne(this)">
-                        <input type="checkbox" name="check" onclick="onlyOne(this)">
+                        <input type="radio" name="check_C22" onclick="onlyOne(this)" class="C22" id="C22_A">
+                        <input type="radio" name="check_C22" onclick="onlyOne(this)" class="C22" id="C22_B">
+                        <input type="radio" name="check_C22" onclick="onlyOne(this)" class="C22" id="C22_C">
+                        <input type="radio" name="check_C22" onclick="onlyOne(this)" class="C22" id="C22_D">
                     </div>
                 </div>
                 <div class="contenaire4">
-                    <label for="C1.1">C2.3. Respect des coûts 25%</label>
+                    <label for="C2.3">C2.3. Respect des coûts 25%</label>
                     <div>
-                        <input type="checkbox" name="check" onclick="onlyOne(this)">
-                        <input type="checkbox" name="check" onclick="onlyOne(this)">
-                        <input type="checkbox" name="check" onclick="onlyOne(this)">
-                        <input type="checkbox" name="check" onclick="onlyOne(this)">
+                        <input type="radio" name="check_C23" onclick="onlyOne(this)" class="C23" id="C23_A">
+                        <input type="radio" name="check_C23" onclick="onlyOne(this)" class="C23" id="C23_B">
+                        <input type="radio" name="check_C23" onclick="onlyOne(this)" class="C23" id="C23_C">
+                        <input type="radio" name="check_C23" onclick="onlyOne(this)" class="C23" id="C23_D">
                     </div>
                 </div>
                 <div class="contenaire4">
-                    <label for="C1.1">C2.4. Réalisation des objectifs 25%</label>
+                    <label for="C2.4">C2.4. Réalisation des objectifs 25%</label>
                     <div>
-                        <input type="checkbox" name="check" onclick="onlyOne(this)">
-                        <input type="checkbox" name="check" onclick="onlyOne(this)">
-                        <input type="checkbox" name="check" onclick="onlyOne(this)">
-                        <input type="checkbox" name="check" onclick="onlyOne(this)">
+                        <input type="radio" name="check_C24" onclick="onlyOne(this)" class="C24" id="C24_A">
+                        <input type="radio" name="check_C24" onclick="onlyOne(this)" class="C24" id="C24_B">
+                        <input type="radio" name="check_C24" onclick="onlyOne(this)" class="C24" id="C24_C">
+                        <input type="radio" name="check_C24" onclick="onlyOne(this)" class="C24" id="C24_D">
                     </div>
                 </div>
                 <label for="Evaluation_qualitative : "><span class="textarea_label">Evaluation qualitative :<span
@@ -201,48 +201,48 @@
                         </div>
                     </div>
                     <div class="contenaire4">
-                        <label for="C1.1">C3.1. Assiduité et ponctualité 50%</label>
+                        <label for="C3.1">C3.1. Assiduité et ponctualité 50%</label>
                         <div>
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
+                            <input type="radio" name="check_C31" onclick="onlyOne(this)" class="C31" id="C31_A">
+                            <input type="radio" name="check_C31" onclick="onlyOne(this)" class="C31" id="C31_B">
+                            <input type="radio" name="check_C31" onclick="onlyOne(this)" class="C31" id="C31_C">
+                            <input type="radio" name="check_C31" onclick="onlyOne(this)" class="C31" id="C31_D">
                         </div>
                     </div>
                     <div class="contenaire4">
-                        <label for="C1.1">C3.2. Esprit d’initiative 10%</label>
+                        <label for="C3.2">C3.2. Esprit d’initiative 10%</label>
                         <div>
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
+                            <input type="radio" name="check_C32" onclick="onlyOne(this)" class="C32" id="C32_A">
+                            <input type="radio" name="check_C32" onclick="onlyOne(this)" class="C32" id="C32_B">
+                            <input type="radio" name="check_C32" onclick="onlyOne(this)" class="C32" id="C32_C">
+                            <input type="radio" name="check_C32" onclick="onlyOne(this)" class="C32" id="C32_D">
                         </div>
                     </div>
                     <div class="contenaire4">
-                        <label for="C1.1">C3.3. Persévérance dans l’effort 10%</label>
+                        <label for="C3.3">C3.3. Persévérance dans l’effort 10%</label>
                         <div>
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
+                            <input type="radio" name="check_C33" onclick="onlyOne(this)" class="C33" id="C33_A">
+                            <input type="radio" name="check_C33" onclick="onlyOne(this)" class="C33" id="C33_B">
+                            <input type="radio" name="check_C33" onclick="onlyOne(this)" class="C33" id="C33_C">
+                            <input type="radio" name="check_C33" onclick="onlyOne(this)" class="C33" id="C33_D">
                         </div>
                     </div>
                     <div class="contenaire4">
-                        <label for="C1.1">C3.4. Relations humaines 10%</label>
+                        <label for="C3.4">C3.4. Relations humaines 10%</label>
                         <div>
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
+                            <input type="radio" name="check_C34" onclick="onlyOne(this)" class="C34" id="C34_A">
+                            <input type="radio" name="check_C34" onclick="onlyOne(this)" class="C34" id="C34_B">
+                            <input type="radio" name="check_C34" onclick="onlyOne(this)" class="C34" id="C34_C">
+                            <input type="radio" name="check_C34" onclick="onlyOne(this)" class="C34" id="C34_D">
                         </div>
                     </div>
                     <div class="contenaire4">
-                        <label for="C1.1">C3.5. Adhésion aux valeurs du groupe 20%</label>
+                        <label for="C3.5">C3.5. Adhésion aux valeurs du groupe 20%</label>
                         <div>
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
-                            <input type="checkbox" name="check" onclick="onlyOne(this)">
+                            <input type="radio" name="check_C35" onclick="onlyOne(this)" class="C35" id="C35_A">
+                            <input type="radio" name="check_C35" onclick="onlyOne(this)" class="C35" id="C35_B">
+                            <input type="radio" name="check_C35" onclick="onlyOne(this)" class="C35" id="C35_C">
+                            <input type="radio" name="check_C35" onclick="onlyOne(this)" class="C35" id="C35_D">
                         </div>
                     </div>
                     <label for="Evaluation_qualitative : "><span class="textarea_label">Evaluation qualitative :<span
