--- a/survey/index.html
+++ b/survey/index.html
@@ -54,7 +54,33 @@
             <div>Critère D'évaluation</div>
             <div class="section_element">
                 <div>1. Compétences</div>
-                <div class="rating_box"></div>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
+                        <path
+                            d="M64,4a60,60,0,1,0,30,8A60,60,0,0,0,64,4ZM35.24,49.9a4.27,4.27,0,0,1,0-6.08,14.95,14.95,0,0,1,23.23,0,4.3,4.3,0,1,1-6.09,6.08c-4-4.28-7-4.28-11.05,0a4.29,4.29,0,0,1-6.09,0ZM88.09,93.06A38.62,38.62,0,0,1,64,102.57,38.57,38.57,0,0,1,39.91,93.1,4.3,4.3,0,0,1,41.17,86a4.32,4.32,0,0,1,4.06.38c12.86,10.24,24.73,10.24,37.54,0h0a4.29,4.29,0,0,1,6.3.45,4.28,4.28,0,0,1-1,6.23ZM92.76,49.9h0a4.29,4.29,0,0,1-6.09,0c-4-4.29-7-4.29-11.06,0A4.31,4.31,0,0,1,68.41,48a4.33,4.33,0,0,1,1.12-4.16,15,15,0,0,1,23.23,0,4.31,4.31,0,0,1,0,6.09Z"
+                            style="fill:#006837" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
+                        <path
+                            d="M64,4a60,60,0,1,0,30,8A60,60,0,0,0,64,4ZM46.86,38.29A8.57,8.57,0,1,1,40.8,40.8,8.57,8.57,0,0,1,46.86,38.29ZM88.09,93.06A38.62,38.62,0,0,1,64,102.57,38.57,38.57,0,0,1,39.91,93.1,4.3,4.3,0,0,1,41.17,86a4.32,4.32,0,0,1,4.06.38c12.86,10.24,24.73,10.24,37.54,0h0a4.29,4.29,0,0,1,6.3.45,4.28,4.28,0,0,1-1,6.23Zm-7-37.63a8.57,8.57,0,1,1,6.06-2.51A8.57,8.57,0,0,1,81.14,55.43Z"
+                            style="fill:#009245" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
+                        <path
+                            d="M64,4a60,60,0,1,0,30,8A60,60,0,0,0,64,4ZM46.86,38.29A8.57,8.57,0,1,1,40.8,40.8,8.57,8.57,0,0,1,46.86,38.29ZM85.43,94H42.57a4.29,4.29,0,1,1,0-8.57H85.43a4.29,4.29,0,1,1,0,8.57ZM81.14,55.43a8.57,8.57,0,1,1,6.06-2.51A8.57,8.57,0,0,1,81.14,55.43Z"
+                            style="fill:#8cc63f" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
+                        <path
+                            d="M64,4a60,60,0,1,0,30,8A60,60,0,0,0,64,4ZM46.86,38.29A8.57,8.57,0,1,1,40.8,40.8,8.57,8.57,0,0,1,46.86,38.29ZM88.77,92.37a4.29,4.29,0,0,1-6,.69C69.91,82.81,58,82.81,45.23,93.06h0a4.24,4.24,0,0,1-6-.69,4.3,4.3,0,0,1,.68-6c15.78-12.6,32.45-12.6,48.18,0h0a4.28,4.28,0,0,1,.68,6ZM81.14,55.43a8.57,8.57,0,1,1,6.06-2.51A8.57,8.57,0,0,1,81.14,55.43Z"
+                            style="fill:#f7931e" />
+                    </svg>
+                <div class="rating_box">
+                    <label for="C1.1">C1.1. Connaissances de base en relation avec la formation initiale 10%</label>
+                            <input type="radio" name="check_C11" onclick="onlyOne(this)" class="C11" id="C11_A">
+                            <input type="radio" name="check_C11" onclick="onlyOne(this)" class="C11" id="C11_B">
+                            <input type="radio" name="check_C11" onclick="onlyOne(this)" class="C11" id="C11_C">
+                            <input type="radio" name="check_C11" onclick="onlyOne(this)" class="C11" id="C11_D">
+                </div>
             </div>
         </section>
     </div>
